tests/snapshots/test_nom_from_file__blank_lines.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: " LP format example"
sense: Minimize
objectives:
  obj:
    name: obj
    coefficients:
      - var_name: x
        coefficient: 1
      - var_name: y
        coefficient: 10
constraints:
  r01:
    type: Standard
    name: r01
    coefficients:
      - var_name: x
        coefficient: 1
      - var_name: y
        coefficient: 1
    operator: GTE
    rhs: 1
variables:
  x:
    name: x
    var_type: Binary
  y:
    name: y
    var_type: Binary
  z:
    name: z
    var_type: Binary
