tests/snapshots/test_nom_from_file__computer_plant_problem.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: " Computer_Plant_Problem "
sense: Minimize
objectives:
  Total_Costs:
    name: Total_Costs
    coefficients:
      - var_name: BuildaPlant_Denver
        coefficient: 70000
      - var_name: BuildaPlant_Los_Angeles
        coefficient: 70000
      - var_name: BuildaPlant_Phoenix
        coefficient: 65000
      - var_name: BuildaPlant_San_Francisco
        coefficient: 70000
      - var_name: Route_Denver_Barstow
        coefficient: 8
      - var_name: Route_Denver_Dallas
        coefficient: 5
      - var_name: Route_Denver_San_Diego
        coefficient: 9
      - var_name: Route_Denver_Tucson
        coefficient: 6
      - var_name: Route_Los_Angeles_Barstow
        coefficient: 7
      - var_name: Route_Los_Angeles_Dallas
        coefficient: 10
      - var_name: Route_Los_Angeles_San_Diego
        coefficient: 4
      - var_name: Route_Los_Angeles_Tucson
        coefficient: 8
      - var_name: Route_Phoenix_Barstow
        coefficient: 5
      - var_name: Route_Phoenix_Dallas
        coefficient: 8
      - var_name: Route_Phoenix_San_Diego
        coefficient: 6
      - var_name: Route_Phoenix_Tucson
        coefficient: 3
      - var_name: Route_San_Francisco_Barstow
        coefficient: 3
      - var_name: Route_San_Francisco_Dallas
        coefficient: 6
      - var_name: Route_San_Francisco_San_Diego
        coefficient: 5
      - var_name: Route_San_Francisco_Tucson
        coefficient: 2
constraints:
  Sum_of_Products_into_Stores_Barstow:
    type: Standard
    name: Sum_of_Products_into_Stores_Barstow
    coefficients:
      - var_name: Route_Denver_Barstow
        coefficient: 1
      - var_name: Route_Los_Angeles_Barstow
        coefficient: 1
      - var_name: Route_Phoenix_Barstow
        coefficient: 1
      - var_name: Route_San_Francisco_Barstow
        coefficient: 1
    operator: GTE
    rhs: 1000
  Sum_of_Products_into_Stores_Dallas:
    type: Standard
    name: Sum_of_Products_into_Stores_Dallas
    coefficients:
      - var_name: Route_Denver_Dallas
        coefficient: 1
      - var_name: Route_Los_Angeles_Dallas
        coefficient: 1
      - var_name: Route_Phoenix_Dallas
        coefficient: 1
      - var_name: Route_San_Francisco_Dallas
        coefficient: 1
    operator: GTE
    rhs: 1200
  Sum_of_Products_into_Stores_San_Diego:
    type: Standard
    name: Sum_of_Products_into_Stores_San_Diego
    coefficients:
      - var_name: Route_Denver_San_Diego
        coefficient: 1
      - var_name: Route_Los_Angeles_San_Diego
        coefficient: 1
      - var_name: Route_Phoenix_San_Diego
        coefficient: 1
      - var_name: Route_San_Francisco_San_Diego
        coefficient: 1
    operator: GTE
    rhs: 1700
  Sum_of_Products_into_Stores_Tucson:
    type: Standard
    name: Sum_of_Products_into_Stores_Tucson
    coefficients:
      - var_name: Route_Denver_Tucson
        coefficient: 1
      - var_name: Route_Los_Angeles_Tucson
        coefficient: 1
      - var_name: Route_Phoenix_Tucson
        coefficient: 1
      - var_name: Route_San_Francisco_Tucson
        coefficient: 1
    operator: GTE
    rhs: 1500
  Sum_of_Products_out_of_Plant_Denver:
    type: Standard
    name: Sum_of_Products_out_of_Plant_Denver
    coefficients:
      - var_name: BuildaPlant_Denver
        coefficient: -2000
      - var_name: Route_Denver_Barstow
        coefficient: 1
      - var_name: Route_Denver_Dallas
        coefficient: 1
      - var_name: Route_Denver_San_Diego
        coefficient: 1
      - var_name: Route_Denver_Tucson
        coefficient: 1
    operator: LTE
    rhs: 0
  Sum_of_Products_out_of_Plant_Los_Angeles:
    type: Standard
    name: Sum_of_Products_out_of_Plant_Los_Angeles
    coefficients:
      - var_name: BuildaPlant_Los_Angeles
        coefficient: -2000
      - var_name: Route_Los_Angeles_Barstow
        coefficient: 1
      - var_name: Route_Los_Angeles_Dallas
        coefficient: 1
      - var_name: Route_Los_Angeles_San_Diego
        coefficient: 1
      - var_name: Route_Los_Angeles_Tucson
        coefficient: 1
    operator: LTE
    rhs: 0
  Sum_of_Products_out_of_Plant_Phoenix:
    type: Standard
    name: Sum_of_Products_out_of_Plant_Phoenix
    coefficients:
      - var_name: BuildaPlant_Phoenix
        coefficient: -1700
      - var_name: Route_Phoenix_Barstow
        coefficient: 1
      - var_name: Route_Phoenix_Dallas
        coefficient: 1
      - var_name: Route_Phoenix_San_Diego
        coefficient: 1
      - var_name: Route_Phoenix_Tucson
        coefficient: 1
    operator: LTE
    rhs: 0
  Sum_of_Products_out_of_Plant_San_Francisco:
    type: Standard
    name: Sum_of_Products_out_of_Plant_San_Francisco
    coefficients:
      - var_name: BuildaPlant_San_Francisco
        coefficient: -1700
      - var_name: Route_San_Francisco_Barstow
        coefficient: 1
      - var_name: Route_San_Francisco_Dallas
        coefficient: 1
      - var_name: Route_San_Francisco_San_Diego
        coefficient: 1
      - var_name: Route_San_Francisco_Tucson
        coefficient: 1
    operator: LTE
    rhs: 0
variables:
  BuildaPlant_Denver:
    name: BuildaPlant_Denver
    var_type: Free
  BuildaPlant_Los_Angeles:
    name: BuildaPlant_Los_Angeles
    var_type: Free
  BuildaPlant_Phoenix:
    name: BuildaPlant_Phoenix
    var_type: Free
  BuildaPlant_San_Francisco:
    name: BuildaPlant_San_Francisco
    var_type: Free
  Route_Denver_Barstow:
    name: Route_Denver_Barstow
    var_type:
      LowerBound: 0
  Route_Denver_Dallas:
    name: Route_Denver_Dallas
    var_type:
      LowerBound: 0
  Route_Denver_San_Diego:
    name: Route_Denver_San_Diego
    var_type:
      LowerBound: 0
  Route_Denver_Tucson:
    name: Route_Denver_Tucson
    var_type:
      LowerBound: 0
  Route_Los_Angeles_Barstow:
    name: Route_Los_Angeles_Barstow
    var_type:
      LowerBound: 0
  Route_Los_Angeles_Dallas:
    name: Route_Los_Angeles_Dallas
    var_type:
      LowerBound: 0
  Route_Los_Angeles_San_Diego:
    name: Route_Los_Angeles_San_Diego
    var_type:
      LowerBound: 0
  Route_Los_Angeles_Tucson:
    name: Route_Los_Angeles_Tucson
    var_type:
      LowerBound: 0
  Route_Phoenix_Barstow:
    name: Route_Phoenix_Barstow
    var_type:
      LowerBound: 0
  Route_Phoenix_Dallas:
    name: Route_Phoenix_Dallas
    var_type:
      LowerBound: 0
  Route_Phoenix_San_Diego:
    name: Route_Phoenix_San_Diego
    var_type:
      LowerBound: 0
  Route_Phoenix_Tucson:
    name: Route_Phoenix_Tucson
    var_type:
      LowerBound: 0
  Route_San_Francisco_Barstow:
    name: Route_San_Francisco_Barstow
    var_type:
      LowerBound: 0
  Route_San_Francisco_Dallas:
    name: Route_San_Francisco_Dallas
    var_type:
      LowerBound: 0
  Route_San_Francisco_San_Diego:
    name: Route_San_Francisco_San_Diego
    var_type:
      LowerBound: 0
  Route_San_Francisco_Tucson:
    name: Route_San_Francisco_Tucson
    var_type:
      LowerBound: 0
