tests/snapshots/test_nom_from_file__empty_bounds.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: " LP format example"
sense: Minimize
objectives:
  obj:
    name: obj
    coefficients:
      - var_name: x
        coefficient: 1
      - var_name: y
        coefficient: 10
constraints:
  r01:
    type: Standard
    name: r01
    coefficients:
      - var_name: x
        coefficient: 1
      - var_name: y
        coefficient: 1
    operator: GTE
    rhs: 1
variables:
  x:
    name: x
    var_type: Free
  y:
    name: y
    var_type: Free
