tests/snapshots/test_nom_from_file__lol.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: " File: lo1.lp"
sense: Maximize
objectives:
  obj:
    name: obj
    coefficients:
      - var_name: x1
        coefficient: 3
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 5
      - var_name: x4
        coefficient: 1
constraints:
  c1:
    type: Standard
    name: c1
    coefficients:
      - var_name: x1
        coefficient: 3
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 2
    operator: EQ
    rhs: 30
  c2:
    type: Standard
    name: c2
    coefficients:
      - var_name: x1
        coefficient: 2
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 3
      - var_name: x4
        coefficient: 1
    operator: GTE
    rhs: 15
  c3:
    type: Standard
    name: c3
    coefficients:
      - var_name: x2
        coefficient: 2
      - var_name: x4
        coefficient: 3
    operator: LTE
    rhs: 25
variables:
  x1:
    name: x1
    var_type:
      DoubleBound:
        - 0
        - inf
  x2:
    name: x2
    var_type:
      DoubleBound:
        - 0
        - 10
  x3:
    name: x3
    var_type:
      DoubleBound:
        - 0
        - inf
  x4:
    name: x4
    var_type:
      DoubleBound:
        - 0
        - inf
